--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "socket.io": "^1.0.4",
     "static-favicon": "~1.0.0",
     "skynet" : "*",
-     "when" : "~3.2.3"
+     "when" : "~3.2.3",
+     "nedb" : "^0.11.1"
   }
 }
