--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "static-favicon": "~1.0.0",
     "skynet" : "*",
      "when" : "~3.2.3",
-     "nedb" : "^0.11.1"
+     "nedb" : "^0.11.1",
+    "node-uuid" : "^1.4.1"
   }
 }
