Fixing config sample to point to default meshblu instance

--- a/configjs.sample
+++ b/configjs.sample
@@ -4,7 +4,7 @@ module.exports = {
         port: process.env.MINDWAVE_PORT || '13854'
     },
     skynet: {
-        host: process.env.SKYNET_HOST || 'skynet.im',
+        host: process.env.SKYNET_SERVER || 'meshblu.octoblu.com',
         port: process.env.SKYNET_PORT || '80'
     },
     app: {
